--- a/index.html
+++ b/index.html
@@ -7,56 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsivo.css">
     <link rel="shortcut icon"
         href="results-summary-component-main/results-summary-component-main/assets/images/favicon-32x32.png"
         type="image/x-icon">
 </head>
 
 <body>
-    <div class="parte-azul">
-        <p class="resultado">Your Result</p>
-        <div class="circulo">
-            <p class="numero"> 76 </p>
+    <main class="tudo">
+        <div class="parte-azul">
+            <p class="resultado">Your Result</p>
+            <div class="circulo">
+                <p class="numero"> 76 </p>
 
-            <p class="baixo"> of 100 </p>
+                <p class="baixo"> of 100 </p>
+            </div>
+            <h1>Great</h1>
+            <p class="text"> You scored higher than 65% of the people who have taken these tests.</p>
         </div>
-        <h1>Great</h1>
-        <p class="text"> You scored higher than 65% of the people who have taken these tests.</p>
-    </div>
-    <div class="parte-branca">
-        <h2 class="summary">Summary</h2>
-        <div class="quadrinho reaction">
-            <img class="icone" src="./results-summary-component-main/results-summary-component-main/assets/images/icon-reaction.svg"
-                alt="raio">
-            <p class="nomes">Reaction</p>
-            <p class="frente">80</p>
-            <p class="pontuacao">/100</p>
+        <div class="parte-branca">
+            <h2 class="summary">Summary</h2>
+            <div class="quadrinho reaction">
+                <img class="icone"
+                    src="./results-summary-component-main/results-summary-component-main/assets/images/icon-reaction.svg"
+                    alt="raio">
+                <p class="nomes">Reaction</p>
+                <p class="frente">80</p>
+                <p class="pontuacao">/100</p>
+            </div>
+            <div class="quadrinho memory">
+                <img class="icone"
+                    src="./results-summary-component-main/results-summary-component-main/assets/images/icon-memory.svg"
+                    alt="Cerebro">
+                <p class="nomes">Memory</p>
+                <p class="frente">92</p>
+                <p class="pontuacao">/100</p>
+            </div>
+            <div class="quadrinho verbal">
+                <img class="icone"
+                    src="./results-summary-component-main/results-summary-component-main/assets/images/icon-verbal.svg"
+                    alt="balao verde">
+                <p class="nomes">Verbal</p>
+                <p class="frente">61</p>
+                <p class="pontuacao">/100</p>
+            </div>
+            <div class="quadrinho visual">
+                <img class="icone"
+                    src="./results-summary-component-main/results-summary-component-main/assets/images/icon-visual.svg"
+                    alt="olho">
+                <p class="nomes">Visual</p>
+                <p class="frente">72</p>
+                <p class="pontuacao">/100</p>
+            </div>
+            <button>
+                Continue
+            </button>
         </div>
-        <div class="quadrinho memory">
-            <img class="icone" src="./results-summary-component-main/results-summary-component-main/assets/images/icon-memory.svg"
-                alt="Cerebro">
-            <p class="nomes">Memory</p>
-            <p class="frente">92</p>
-            <p class="pontuacao">/100</p>
-        </div>
-        <div class="quadrinho verbal">
-            <img class="icone" src="./results-summary-component-main/results-summary-component-main/assets/images/icon-verbal.svg"
-                alt="balao verde">
-            <p class="nomes">Verbal</p>
-            <p class="frente">61</p>
-            <p class="pontuacao">/100</p>
-        </div>
-        <div class="quadrinho visual">
-            <img class="icone" src="./results-summary-component-main/results-summary-component-main/assets/images/icon-visual.svg"
-                alt="olho">
-            <p class="nomes">Visual</p>
-            <p class="frente">72</p>
-            <p class="pontuacao">/100</p>
-        </div>
-        <button>
-            Continue
-        </button>
-    </div>
+    </main>
 </body>
 
 </html>
